# baethoven

./: .gitignore  README.md  bundle.js  electron-builder.json  package-lock.json  package.json  version.json
.github/workflows/: pages.yml  release-windows.yml
electron/: auth-preload.js  auth.html  license.js  main.js  preload.js  run-electron.js  updater.js
source/: BAETHOVEN.dc.html
src-tauri/: Cargo.toml  auth.html  build.rs  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
web/: index.html
