[package]
name = "baethoven"
version = "1.0.0"
edition = "2021"

[lib]
name = "baethoven_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-deep-link = "2"
tauri-plugin-store = "2"
tauri-plugin-updater = "2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
# WebKit/WKWebView has no Web MIDI API, so navigator.requestMIDIAccess is
# undefined in the packaged app. This plugin bridges native MIDI (midir ->
# CoreMIDI on macOS) and injects a polyfill that defines requestMIDIAccess.
tauri-plugin-midi = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }

# macOS only. Used to hold an NSProcessInfo user-interactive / latency-critical
# activity for the app lifetime so App Nap and timer coalescing don't throttle the
# Web Audio + MIDI threads while Baethoven is in the background. objc2-foundation is
# already a transitive dependency (via tao/wry) at this exact version, so declaring
# it directly adds no new crate to the build — it just unions in the modules we need.
[target.'cfg(target_os = "macos")'.dependencies]
objc2-foundation = { version = "0.3", features = ["NSProcessInfo", "NSString"] }
